Simplified loading .gif handling and resolved issue with scrollbar disappearing during loading

--- a/DataNervesUI/Content/NewsLibrary.css
+++ b/DataNervesUI/Content/NewsLibrary.css
@@ -152,16 +152,8 @@ input[type=text] {
 }
 
 /* Loading icons */
-.modal {
-    display:    none;
-}
-
-body.loading {
-    overflow: hidden;   
-}
-
-body.loading .modal {
-    display: inline;
+.loadingIcon {
+    display: none;
 }
 
 /* Tooltips */
